# biomass-carbon-ml-bo-audit

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_en.md  pyproject.toml  requirements.txt  skill.md
.agents/skills/carbon-literature-bo-replay/: SKILL.md
.github/workflows/: tests.yml
config/: descriptor_rules.yaml  leakage_rules.yaml  replay_defaults.yaml
configs/: default_replay_config.json
docs/: architecture.md  git_commit_guide.md
examples/: run_demo.py
examples/input/: carbon_literature_demo.csv
examples/sib_hard_carbon_public_demo/: README.md  sib_hard_carbon_public_synthetic_demo_80.csv
examples/sib_hard_carbon_synthetic/: synthetic_sib_hard_carbon.csv
outputs/: README.md
prompts/: 01_dataset_profile_agent.md  02_descriptor_schema_agent.md  03_replay_protocol_agent.md  04_surrogate_agent.md  05_acquisition_replay_agent.md  06_baseline_comparison_agent.md  07_leakage_validity_agent.md  08_report_agent.md
schemas/: acquisition_trace.schema.json  dataset_profile.schema.json  leakage_audit.schema.json  replay_config.schema.json  replay_protocol.schema.json  sample.schema.json
scripts/: audit_dataset.py  convert_sib_chinese_workbook.py  make_demo_dataset.py  run_offline_bo_replay.py  run_pipeline.py  utils.py
src/carbon_literature_bo_replay/: cli.py  features.py  io.py  leakage.py  plotting.py  profile.py  replay.py  report.py  surrogate.py
src/carbon_literature_bo_replay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_features.py  test_profile.py  test_replay.py  test_scripts_smoke.py
(+8 files in other folders)
