[project]
name = "carbon-literature-bo-replay-skill"
version = "0.1.0"
description = "Data-quality-aware offline BO replay for literature-derived biomass carbon electrode datasets."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "jsonschema>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
